5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1613_2425.log
== SUBMITION (2019-04-04 02:49:09) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3)"km/l")
-- EXECUTION TIME:
0.191945
-- ERROR:
  File "/home/codebench/codes/1613/2425/main.py", line 4
    print(round(c,3)"km/l")
                         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:49:26) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3)"km/l")
-- ERROR:
File "XXXX", line 4
    print(round(c,3)"km/l")
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:50:17) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3"km/l"))
-- ERROR:
File "XXXX", line 4
    print(round(c,3"km/l"))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:51:29) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3)km/l)
-- ERROR:
File "XXXX", line 4
    print(round(c,3)km/l)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:53:04) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3)("km/l))
-- ERROR:
File "XXXX", line 4
    print(round(c,3)("km/l))
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:53:32) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(c,3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:57:34) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3)d)
-- ERROR:
File "XXXX", line 5
    print(round(c,3)d)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:58:57) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3(d)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(c,3(d)))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 02:59:57) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(c,d)
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 03:01:52) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
round(c,3)
print(c,d)
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 03:03:03) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
round(c,3)
print(round(c,3),d)
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 03:04:18) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 03:04:18) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
print(round(c,3),"km/l")
-- EXECUTION TIME:
0.183312
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
kilometros:   litros14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
kilometros:   litros18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
kilometros:   litros9.802 km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 03:05:18) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),"d")
-- OUTPUT:
14.286 d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 03:05:30) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),"d")
-- EXECUTION TIME:
0.146206
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 d
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 d
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 d
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 03:06:24) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),"d")
-- EXECUTION TIME:
0.113885
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 d
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 d
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 d
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 03:06:42) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),"d")
-- OUTPUT:
14.286 d
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 03:07:19) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),d)
-- EXECUTION TIME:
0.122363
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:19:42) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),d)
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:19:43) 
-- CODE:
a=float(input("kilometros:   "))
b=float(input("litros"))
c=a/b
d="km/l"
print(round(c,3),d)
-- EXECUTION TIME:
0.146091
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
